--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 </div>
                 <div class="bg-gray-100 p-4 rounded-lg border border-gray-300 shadow-inner">
                     <label class="block text-sm font-bold mb-1">นับระยะเวลาที่ดำเนินการ (วัน)</label>
-                    <div class="text-gray-700 text-xl font-black" id="calculatedDays">รอการคำนวณ</div>
-                    <p class="text-[10px] text-gray-500 italic mt-1">* นับรวมวันที่เริ่มและวันตรวจสอบ (+1 วัน)</p>
+                    <div class="text-gray-700 text-xl font-black" id="calculatedDays">รอการคำนวณ</div
                 </div>
 
                 <hr class="md:col-span-2 border-[#3E92CC] opacity-30 my-2">
@@ -356,3 +355,4 @@
     </script>
 </body>
 </html>
+
